--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Surge Deployment React App
+name: React App Deploy to Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -19,18 +19,21 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Nose Setup
+    
+    - name: Install NodeJS
       uses: actions/setup-node@v2-beta
-
-    # Runs a set of commands using the runners shell
+      with:
+        node-version: 12
+    
     - uses: borales/actions-yarn@v2.0.0
       with:
         cmd: install # will run `yarn install` command
-    - name: Yarn Build
+        
+    - name: Build React App
       run: yarn build
-    - name: Surge installation
+      
+    - name: Install Surge
       run: npm install --global surge
-    - name: Surge deployment
-      run: surge ./build ahtasham07_basicreact.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+
+    - name: Deploy to Surge
+      run: surge ./build ahtasham07_react.surge.sh --token ${{ secrets.SURGE_TOKEN }}
