--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
       run: npm install --global surge
 
     - name: Deploy to Surge
-      run: surge ./build ahtasham07_react.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build ahtasham07_basicreact.surge.sh --token ${{ secrets.SURGE_TOKEN }}
